tests/parse-errors/all.sysc
import unexpected_character
import unterminated_comment
import unterminated_string_literal
import invalid_escape_sequence
import unexpected_token_in_string_literal
import invalid_block_comment
import unexpected_token
import unexpected_token_after_keyword_func
import unexpected_token_after_keyword_struct
import unclosed_block
import unexpected_token_in_block
import missing_field_after_dot
import unexpected_token_after_dot
import unexpected_token_in_parentheses
import unclosed_parenthesis
import unexpected_token_in_brackets
import unclosed_bracket
